# kaaris-vs-booba

./: CMakeLists.txt  Kaaris vs Booba.cbp  LICENSE  Makefile  README.md  aide.docx  data.c  data.h  editor.c  editor.h  event.c  event.h  file.c  file.h  game.c  game.h  help.docx  key.c  key.h  list.c  list.h  main.c  multi.c  multi.h  net.c  net.h  option.c  option.h  res.rc  template.html  text.c  text.h  transition.c  transition.h  version.h  video.c  video.h
cmake/: FindFFmpeg.cmake
data/maps/: map_1.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  map_7.txt
data/tilesets/: collision.txt  tileset.txt
dep/win64-msvc/ffmpeg/include/libavutil/: ffversion.h
dep/win64-msvc/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/: data.c  data.h  editor.c  editor.h  event.c  event.h  file.c  file.h  game.c  game.h  key.c  key.h  list.c  list.h  main.c  multi.c  multi.h  net.c  net.h  option.c  option.h  res.rc  text.c  text.h  transition.c  utils.c  utils.h  version.h  video.c  video.h
